Fix HumanSL model directory app root detection